[tool.poetry]
name = "TunedLibExtract"
version = "0.1.0"
description = ""
authors = ["Sergey Rivov <rvngtn@live.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
